update: CSSの変更・オートフィル時の背景色を変更

--- a/frontend/nextjs-project/src/app/globals.css
+++ b/frontend/nextjs-project/src/app/globals.css
@@ -10,3 +10,14 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+/* ChromeやSafariのオートフィル時の背景色と文字色を変更 
+*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 100px #85934e inset !important;
+  -webkit-text-fill-color: white !important;
+  caret-color: #5d4037 !important;
+}
