update: postを表示する際に表示する項目を追加

--- a/backend/src/examples/template/example_post_with_image.html
+++ b/backend/src/examples/template/example_post_with_image.html
@@ -154,6 +154,9 @@
                             <b>img_id:</b> ${post.img_id}<br>
                         </div>
                         <p><b>question:</b> ${post.question}</p>
+                        <p><b>target:</b> ${post.target}</p>
+                        <p><b>answer:</b> ${post.answer}</p>
+                        <p><b>toi:</b> ${post.toi}</p>
                         <p><b>location:</b> ${post.location}</p>
                         <div style="margin-top: 1em;">
                             <button id="deleteButton" style="background-color: #d9534f;">この投稿と画像を削除 (Step 5)</button>
