--- a/frontend/nextjs-project/src/app/globals.css
+++ b/frontend/nextjs-project/src/app/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  max-width: 100vw;
+  max-width: 100svw;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
