feat:【バックエンド】user_idをstr型に変更

--- a/backend/src/examples/template/example_post.html
+++ b/backend/src/examples/template/example_post.html
@@ -42,7 +42,7 @@
     <h1>新しい投稿をデータベースに登録</h1>
     <form id="createForm">
         <!-- ID類（必要なら hidden にしてUIから隠してもOK） -->
-        <label for="user_id">user_id (UUID):</label>
+        <label for="user_id">user_id :</label>
         <input type="text" id="user_id" name="user_id" value="{{ form.user_id }}" required />
 
         <label for="img_id">img_id (UUID):</label>
