--- a/backend/src/examples/template/example_post_with_image.html
+++ b/backend/src/examples/template/example_post_with_image.html
@@ -41,7 +41,7 @@
                 <label for="img_id">img_id (UUID):</label>
                 <input type="text" id="img_id" name="img_id" value="{{ post_form.img_id }}" readonly style="background:#eee;">
 
-                <label for="user_id">user_id (UUID):</label>
+                <label for="user_id">user_id :</label>
                 <input type="text" id="user_id" name="user_id" value="{{ post_form.user_id }}" required />
                 
                 <label for="user_question">user_question:</label>
